tests/functional/data/transpiler/common/errors/loops/no_outer.cpp
@kernel void hello_kern() {
    @inner for (int i = 0; i < 10; ++i) {
        @inner for (int j = 0; j < 10; ++j) {
        }
    }
}
