tests/functional/data/transpiler/common/errors/loops/no_outer.err
no_outer.cpp:1:1: error: [@kernel] requires at least one [@outer] for-loop
    1 | @kernel void hello_kern() {
      | ^
